--- a/src/layouts/index.module.css
+++ b/src/layouts/index.module.css
@@ -1,10 +1,16 @@
 .container {
   display: grid;
-  grid-template-columns: 1fr minmax(45ch, 70ch) 1fr;
+  grid-template-columns: 0 1fr 0;
 }
 
 .content {
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
+}
+
+@media all and (min-width: 70ch) {
+  .container {
+    grid-template-columns: 1fr minmax(45ch, 70ch) 1fr;
+  }
 }
